# MYopsTools

./: .gitignore  .pre-commit-config.yaml  README.md  commands.py  pyproject.toml
.dvc/: config
MYopsTools/: infer.py  main.py  train.py
configs/: config.yaml
hw1/: README.md
myops_tools/: client.py  data.py  dataloader.py  download.py  infer.py  models.py  train.py  utils.py
triton/: docker-compose.yaml
triton/model_repository/onnx-AlexNet/: config.pbtxt
triton/model_repository/onnx-AlexNet/1/: model.onnx.dvc
