[tool.poetry]
name = "myopstools"
version = "0.1"
description = "Just some useful MLOps tools"
authors = ["NatalkaPron <natalka-pronina@mail.ru>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.0"
torch = "^2.1.0"
torchvision = "^0.16.0"
matplotlib = "^3.8.0"
pandas = "^2.1.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
skip-string-normalization = true
