[tool.poetry]
name = "myopstools"
version = "0.1"
description = "Just some useful MLOps tools"
authors = ["NatalkaPron <natalka-pronina@mail.ru>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
matplotlib = "^3.8.0"
torch = {version = "^2.1.0+cpu", source = "pytorch"}
torchvision = {version = "^0.16.0+cpu", source = "pytorch"}
tqdm = "^4.66.1"
pandas = "^2.1.1"
pytorch-lightning = "^2.1.2"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
fire = "^0.5.0"
dvc = "^3.31.0"
dvc-gdrive = "^2.20.0"
hydra-core = "1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ["py37"]
skip-string-normalization = true
